Updated Style of yorum.html
Buna ne dersin sevgilim?

--- a/yorum/yorum.html
+++ b/yorum/yorum.html
@@ -5,7 +5,7 @@
     <body>
         <form action="www.google.com">
             <p>Benimle ilgili yorumlarınızı yazın cnm</p>
-            <textarea name="comments" cols="50" rows="5"> Buraya yazın cnm</textarea>
+          <textarea name="comments" cols="50" rows="5" placeholder="Buraya yazın cnm" style="resize:none;"></textarea>
         </form>
     </body>
 </html>
