--- a/ssk bebişim/uh beyb.html
+++ b/ssk bebişim/uh beyb.html
@@ -5,9 +5,9 @@
     <body>
         <h1>keşke aspava olsa</h1>    
         <p>o dürümü yemeyi gerçekten isterdim</p>
-        <img src="durum.jpg" alt="dürüm" />
+        <img src="durum.jpg" alt="dürüm" align="right" />
         <h2>sen de isterdin dimi?</h2>
-        <p>acıktım sanırım. inip yoğurt yiyeyim</p>
+        <p>acıktım sanırımkjkljljkljkjlklasdfgdsasdfghgfdsaASDFGHJHGFDSAasdfghjkjhgfdsasdfghjkjhgfddfghjhgfghgfgfdfghjhgfdsasdfghjkjhgfdfghgfdsdfghjkjhgfdsdfghjkjhgfds. inip yoğurt yiyeyim</p>
         <img src="yogurt.jpg" width="312" height="300" />
         <p>abone olun cnm</p>
         <img src="abone.png" width="200" height="200" />
